package kogayushi.tips.graphql.model.user

import java.util.UUID

data class User(
    val id: UUID,
    val name: String
)
